refactor: change player routes, refactor some functions
